Refactor code: remove unused exports, add titles to HTML files, and update TypeScript types